--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<main>
+<!-- <main>
   <div class="container">
     <div class="row">
       <ul class="ds-btn">
@@ -10,4 +10,4 @@
       </ul>
     </div>
   </div>
-</main>
+</main> -->
