Register new Account created

--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -8,9 +8,9 @@
       <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Register</a>
-      </li> -->
+      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+        <a class="nav-link" [routerLink]="['/register']">Register</a>
+      </li>
       <!-- <li class="nav-item">
         <a class="nav-link" href="#">Auth</a>
       </li> -->
