--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="row offset-top">
+  <div class="row offset-vertical">
     <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2">
       <flash-messages></flash-messages>
       <form role="form" (ngSubmit)="onLoginSubmit()">
         <fieldset>
-          <h2>Please Sign In</h2>
+          <h2>Sign In here</h2>
           <hr class="colorgraph">
           <div class="form-group">
             <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address" [(ngModel)]="email" required>
