--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -9,6 +9,6 @@
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
 
-.offset-top {
-  margin-top: 4.5rem;
+.offset-vertical {
+  margin: 3rem 0rem 12rem 0rem;
 }
