--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,25 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand"  [routerLink]="['/']">FIAP Class</a>
+  <a class="navbar-brand"  [routerLink]="['/']">Login Class</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+      <li class="nav-item" *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
-      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+      <li class="nav-item" *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Auth</a>
-      </li> -->
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Users</a>
-      </li> -->
+      <li class="nav-item" *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+        <a class="nav-link" [routerLink]="['/users']">Users</a>
+      </li>
     </ul>
-    <!-- <span class="navbar-text">
-      Navbar text with an inline element
-    </span> -->
+    <span class="navbar-text" *ngIf="authService.loggedIn()" (click)="onLogoutAction()">
+        <i class="fa fa-sign-out" aria-hidden="true"></i>
+        <span>Logout</span>
+    </span>
   </div>
 </nav>
