Hide Action column

--- a/angular-src/src/app/components/users/users.component.html
+++ b/angular-src/src/app/components/users/users.component.html
@@ -7,7 +7,7 @@
               <th scope="col">E-mail</th>
               <th scope="col">First Name</th>
               <th scope="col">Last Name</th>
-              <th scope="col">Actions</th>
+              <!-- <th scope="col">Actions</th> -->
             </tr>
           </thead>
           <tbody>
@@ -16,7 +16,7 @@
               <td>{{ e.email }}</td>
               <td>{{ e.name }}</td>
               <td>{{ e.last_name }}</td>
-              <td></td>
+              <!-- <td></td> -->
             </tr>
           </tbody>
         </table>
