Changed layout page

--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container align-vertical">
   <div class="row offset-vertical">
     <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2">
       <flash-messages></flash-messages>
