--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,13 +1,13 @@
-<!-- <main>
+<div class="jumbotron">
   <div class="container">
-    <div class="row">
-      <ul class="ds-btn">
-        <li class="btn btn-lg btn-info col-lg-5 col-sm-12" *ngFor="let api of apis">
-          <i class="glyphicon glyphicon-list pull-left"></i>
-          <h4>{{ api.name }}</h4>
-          <p>{{ api.route }}</p>
-        </li>
-      </ul>
-    </div>
+    <h1 class="display-3">Home Page</h1>
+    <p>This is a demo app that uses Node.js and Express.js to create simple backend service. It has APIs to sign up, sign in,
+      fetch all users registered in our NoSQL database. If you want to discover all APIs, access github
+      <a href="https://github.com/victorshinya/login-class">here</a>.
+    </p>
+    <p>
+      <a class="btn btn-primary btn-lg" href="" role="button" *ngIf="!authService.loggedIn()" [routerLink]="['/login']">Login here</a>
+      <a class="btn btn-primary btn-lg" href="" role="button" *ngIf="authService.loggedIn()" [routerLink]="['/users']">Access list of users</a>
+    </p>
   </div>
-</main> -->
+</div>
